--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
         <item>Shop</item>
         <item>Supermarket</item>
     </string-array>
+    <string name="save">Save</string>
     <string name="inserted_bill">Bill registered</string>
     <string name="excluded_bill">Bill excluded</string>
     <string name="remove_bill_confirmation">Are you sure you want to exclude this Bill?</string>
@@ -19,6 +20,7 @@
     <string name="cancel">Cancel</string>
     <string name="show_spendings">Show Spendings</string>
     <string name="addSpending">Add Spending</string>
+    <string name="editSpending">Edit Spending</string>
     <string name="on">on</string>
     <string name="name">Name</string>
     <string name="place">Place</string>
