--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -4,6 +4,8 @@
     <string name="date_format">dd/MM/yyyy</string>
     <string name="date_format_display">dd/mm/aaaa</string>
     <string name="empty_database">Não há nada para mostrar ainda. Tente apertar o botão \"Adicionar Gasto\" para começar!</string>
+    <string name="monthly_spend">Gasto Mensal</string>
+    <string name="total_spend">Gasto Total</string>
     <string-array name="types">
         <item>Alimentação</item>
         <item>Transporte</item>
